k8s/services/delivery-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: webstaurator
spec:
  selector:
    app: delivery-service
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
